--- a/Sesion11/Sesion11_Funciones.ipynb
+++ b/Sesion11/Sesion11_Funciones.ipynb
@@ -488,21 +488,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def multiplicar(a,b):\n",
-    "  return a*b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculadora_suma (c,d,suma = None, multiplica =None):\n",
+    "    def multiplicar2(a,b):\n",
+    "        return a*b\n",
     "    resultadoSuma = None\n",
     "    resultadoMultiplica = None\n",
     "    if suma and multiplica:\n",
@@ -518,7 +510,7 @@
     "\n",
     "        elif multiplica:\n",
     "            print (\"vamos a multiplicar tus valores ingresados: {0}, {1}\".format(c,d))\n",
-    "            resultadoMultiplica = multiplicar(c,d) \n",
+    "            resultadoMultiplica = multiplicar2(c,d) \n",
     "            print (\"El resultado es: {0}\".format(resultadoMultiplica))\n",
     "    \n",
     "\n",
@@ -528,7 +520,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if '__name__' == '__main__':\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'multiplicar2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-152-dd021df200cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmultiplicar2\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'multiplicar2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "multiplicar2 (5,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +568,7 @@
        "(7, None)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -573,41 +596,13 @@
        "(None, 10)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calculadora_suma(5,2, multiplica= True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vamos a sumar tus valores ingresados: 5, 2\n",
-      "vamos a multiplicar tus valores ingresados: 5, 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(7, 10)"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculadora_suma(5,2, suma= True, multiplica= True)"
    ]
   },
   {
@@ -619,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,28 +624,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "suma = funciones.sumar(5,3)"
+    "suma = funciones.sumar(5,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "7\n"
      ]
     }
    ],
    "source": [
     "print (suma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejercicios\n",
+    "\n",
+    "* Hacer una funcion que me permita determinar si una palabra es palindromo\n",
+    "* Hacer una funcion que me permita calcular un factorial\n",
+    "* Hacer una función que me permita contar las vocales de una cadena y reemplazarlas por un valor diferente las vocales\n",
+    "* Hacer una función que me permita reslver la sucesión de fibonacci\n",
+    "* Hacer una calculadora que me permita realziar operaciones matematicas basicas, con modulos aislasdos y que me imrima el resultado\n",
+    "* Crear dos funciones para un programa que me permita indicar cual numero es mayor, menor y que tenga una salida del programa cuando haya -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"fabian\""
    ]
   }
  ],
